--- a/SoftwareLockMass/SoftwareLockMass.csproj
+++ b/SoftwareLockMass/SoftwareLockMass.csproj
@@ -49,10 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalibratedSpectrum.cs" />
+    <Compile Include="CalibrationFunctionHackMean.cs" />
+    <Compile Include="CalibrationFunctionHack.cs" />
     <Compile Include="CalibrationFunction.cs" />
     <Compile Include="mzIdentML1_1_1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="unimod_tables_1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
