--- a/SoftwareLockMass/SoftwareLockMass.csproj
+++ b/SoftwareLockMass/SoftwareLockMass.csproj
@@ -49,14 +49,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalibratedSpectrum.cs" />
-    <Compile Include="CalibrationFunctionClustering.cs" />
-    <Compile Include="CalibrationFunctionHackMean.cs" />
-    <Compile Include="CalibrationFunctionHack.cs" />
-    <Compile Include="CalibrationFunction.cs" />
-    <Compile Include="mzIdentML1_1_1.cs" />
+    <Compile Include="CalibrationFunctions\CalibrationFunction.cs" />
+    <Compile Include="CalibrationFunctions\CalibrationFunctionClustering.cs" />
+    <Compile Include="CalibrationFunctions\CalibrationFunctionHackMean.cs" />
+    <Compile Include="CalibrationFunctions\CalibrationFunctionHack.cs" />
+    <Compile Include="CalibrationFunctions\IdentityCalibrationFunction.cs" />
+    <Compile Include="CalibrationFunctions\LinearCalibrationFunction.cs" />
+    <Compile Include="CalibrationFunctions\DataPoint.cs" />
+    <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
+    <Compile Include="XML\mzIdentML1_1_1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="unimod_tables_1.cs" />
+    <Compile Include="XML\unimod_tables_1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
