--- a/SoftwareLockMass/SoftwareLockMass.csproj
+++ b/SoftwareLockMass/SoftwareLockMass.csproj
@@ -66,6 +66,7 @@
     <Compile Include="XML\mzIdentML1_1_1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XML\PSI-MOD_obo.cs" />
     <Compile Include="XML\unimod_tables_1.cs" />
   </ItemGroup>
   <ItemGroup>
