--- a/Spectra/Spectra.csproj
+++ b/Spectra/Spectra.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Chemistry, Version=1.0.4.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Chemistry.1.0.4\lib\net451\Chemistry.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,24 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chromatogram.cs" />
-    <Compile Include="ChromatographicElutionProfile.cs" />
-    <Compile Include="ChromatographicPeak.cs" />
-    <Compile Include="ClassExtensions.cs" />
+    <Compile Include="Util\ClassExtensions.cs" />
     <Compile Include="DoubleRange.cs" />
-    <Compile Include="IPeak.cs" />
-    <Compile Include="IRange.cs" />
-    <Compile Include="ISpectrum.cs" />
-    <Compile Include="MZPeak.cs" />
+    <Compile Include="Interfaces\IPeak.cs" />
+    <Compile Include="Interfaces\IRange.cs" />
+    <Compile Include="Interfaces\ISpectrum.cs" />
+    <Compile Include="MzPeak.cs" />
     <Compile Include="MzRange.cs" />
     <Compile Include="MzSpectrum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
-    <Compile Include="SmoothingType.cs" />
     <Compile Include="Spectrum.cs" />
-    <Compile Include="Tolerance.cs" />
-    <Compile Include="ToleranceType.cs" />
-    <Compile Include="ToleranceUnit.cs" />
+    <Compile Include="Util\Tolerance.cs" />
+    <Compile Include="Util\ToleranceType.cs" />
+    <Compile Include="Util\ToleranceUnit.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
