--- a/MassSpectrometry/MassSpectrometry.csproj
+++ b/MassSpectrometry/MassSpectrometry.csproj
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.4.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Chemistry.1.0.4\lib\net451\Chemistry.dll</HintPath>
+    <Reference Include="Chemistry, Version=1.0.7.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Chemistry.1.0.7\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -49,7 +49,7 @@
     <Compile Include="Chromatogram.cs" />
     <Compile Include="ChromatographicElutionProfile.cs" />
     <Compile Include="ChromatographicPeak.cs" />
-    <Compile Include="IMassSpectrum.cs" />
+    <Compile Include="IHasMassSpectrum.cs" />
     <Compile Include="Util\ClassExtensions.cs" />
     <Compile Include="Enums\DissociationType.cs" />
     <Compile Include="IMsDataFile.cs" />
