--- a/SoftwareLockMass/SoftwareLockMass.csproj
+++ b/SoftwareLockMass/SoftwareLockMass.csproj
@@ -36,8 +36,20 @@
       <HintPath>..\packages\Chemistry.1.0.7\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MassSpectrometry, Version=1.0.1.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.1\lib\net451\MassSpectrometry.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Proteomics, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Proteomics.1.0.0\lib\net451\Proteomics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.1\lib\net451\Spectra.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -83,18 +95,6 @@
     <ProjectReference Include="..\..\CSMSL\CSMSL\IO\Thermo\Thermo.csproj">
       <Project>{24DC85FF-E97B-4140-9614-77DD8FDDD32F}</Project>
       <Name>Thermo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MassSpectrometry\MassSpectrometry.csproj">
-      <Project>{9BF1F2FD-C17A-4151-861A-939FE342EC38}</Project>
-      <Name>MassSpectrometry</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Proteomics\Proteomics.csproj">
-      <Project>{DA8E4387-675C-42E7-9444-770548A5108E}</Project>
-      <Name>Proteomics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Spectra\Spectra.csproj">
-      <Project>{088E4FCB-D580-4BAD-A811-A1796A7666D2}</Project>
-      <Name>Spectra</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
