--- a/SoftwareLockMassCommandLine/SoftwareLockMassCommandLine.csproj
+++ b/SoftwareLockMassCommandLine/SoftwareLockMassCommandLine.csproj
@@ -52,6 +52,22 @@
       <HintPath>..\packages\Chemistry.1.0.7\lib\net451\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MassSpectrometry, Version=1.0.1.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.1\lib\net451\MassSpectrometry.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MathNet.Numerics, Version=3.11.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.11.1\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Proteomics, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\Proteomics.1.0.0\lib\net451\Proteomics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Spectra, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\MassSpectrometry.1.0.1\lib\net451\Spectra.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
