--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="myFile.mzML">
+    <None Include="myFakeFile.mzML">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="myIdentifications.mzid">
