--- a/SoftwareLockMass/packages.config
+++ b/SoftwareLockMass/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.0.2" targetFramework="net451" />
+  <package id="Accord.MachineLearning" version="3.0.2" targetFramework="net451" />
+  <package id="Accord.Math" version="3.0.2" targetFramework="net451" />
+  <package id="Accord.Statistics" version="3.0.2" targetFramework="net451" />
   <package id="Chemistry" version="1.0.113" targetFramework="net451" />
-  <package id="MassSpectrometry" version="1.0.98" targetFramework="net451" />
+  <package id="MassSpectrometry" version="1.0.107" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.12.0" targetFramework="net451" />
-  <package id="Proteomics" version="1.0.33" targetFramework="net451" />
+  <package id="Proteomics" version="1.0.35" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
