--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: csharp
-solution: SoftwareLockMass.sln
+solution: mzCal.sln
 install:
-- nuget restore SoftwareLockMass.sln
+- nuget restore mzCal.sln
 - nuget install NUnit.Console -OutputDirectory testrunner
 script:
-- xbuild /p:Configuration=TestAndRelease SoftwareLockMass.sln
+- xbuild /p:Configuration=TestAndRelease mzCal.sln
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
-- tar -zcvf MonoCommandLine.tar.gz -C SoftwareLockMassCommandLine/bin/Release .
-- mono ./SoftwareLockMassCommandLine/bin/Release/SoftwareLockMassCommandLine.exe Test/myFakeFile.mzML Test/myIdentifications.mzid
+- tar -zcvf MonoCommandLine.tar.gz -C mzCal/bin/Release .
+- mono ./mzCalCommandLine/bin/Release/mzCal.exe Test/myFakeFile.mzML Test/myIdentifications.mzid
 deploy:
   provider: releases
   file: MonoCommandLine.tar.gz
