--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -81,17 +81,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SoftwareLockMassIO\SoftwareLockMassIO.csproj">
-      <Project>{06ad5939-8437-4f2a-bf3c-2b181d6f0308}</Project>
-      <Name>SoftwareLockMassIO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SoftwareLockMass\SoftwareLockMass.csproj">
-      <Project>{475C3B7B-4367-4BC8-8192-2A850C72812B}</Project>
-      <Name>SoftwareLockMass</Name>
-    </ProjectReference>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <ProjectReference Include="..\mzCalIO\mzCalIO.csproj">
+      <Project>{06ad5939-8437-4f2a-bf3c-2b181d6f0308}</Project>
+      <Name>mzCalIO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\mzCal\mzCal.csproj">
+      <Project>{475C3B7B-4367-4BC8-8192-2A850C72812B}</Project>
+      <Name>mzCal</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
