change to mzCalLogic

--- a/mzCal/mzCal.csproj
+++ b/mzCal/mzCal.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>mzCal</RootNamespace>
-    <AssemblyName>mzCal</AssemblyName>
+    <AssemblyName>mzCalLogic</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
